main.css
a {
	color: #36B;
}

a:visited {
	color: purple;
}

input {
	background: #000 !important;
	color: #ddd !important;
	border-color: #555;
}

hr,
#mw-head {
    display: none !important;
}

.documentation,
.iw-resultset {
	background-color: #000 !important;
	border: 0 !important;
}
.documentation-startbox {
    border: 0 !important;
}

#mw-fr-reviewnotice,
.navbox,
.navbox-group {
	background-color: #000;
	color: #888;
	border: none !important;
}

html,
[style*="#CFFF9F;"],
.mw-echo-notifications-badge, 
.mw-highlight,
aside li, /* related articles */
.NavHead,
[style*="#CFFF9F;"],
div.vectorTabs,
div.vectorTabs span,
#mw-head .vectorMenu h3,
.infobox *,
#editpage-specialchars a,
tr,
.quotebox,
.sistersitebox,
.oo-ui-buttonElement-framed.oo-ui-widget-enabled > .oo-ui-buttonElement-button,
.mw-advancedSearch-fieldContainer,
.oo-ui-tagMultiselectWidget.oo-ui-widget-enabled,
.mw-advancedSearch-namespace-selection {
    background: #000 !important;
}

.quotebox,
.oo-ui-buttonElement-framed.oo-ui-widget-enabled > .oo-ui-buttonElement-button,
.oo-ui-tagMultiselectWidget-handle {
	border-color: #222 !important;
}

.vectorTabs .selected {
	background-image: none;
	background: gray;
}

div.vectorTabs ul li{
	background-image: none;
	background: #000;
}

.mw-advancedSearch-fieldContainer .oo-ui-labelElement > .oo-ui-fieldsetLayout-header > .oo-ui-labelElement-label {
	background: #000;
	color: lightgray;
}

#siteSub {
	display:none;
}

/* main font */
.mw-body-content {
	font-size: 1.5em;
}

.infobox {
	background: #000;
	color: lightgray;
	border: none;
}

div.thumbinner,
.editOptions /* page for editing css - below code */
{
	background-color: #000;
	border: none !important;
}

caption {
	color: gray !important;
}

.plainlist,
.mw-edittools-wiki-markup, /* page for editing code - below the code */
.infobox,  /* infobox - is the right from the article */
table,
td
{
	border-color: #222 !important;
}

table, 
.plainlinks,
.editOptions, 
.catlinks, 
.noprint
{
	background: #000 !important;
	border: none !important;
}

table.wikitable > tr > th, table.wikitable > * > tr > th {
	background-color: gray;
}

tr {
	color: wheat;
}

th {
	border-color: #222 !important;
}

#mw-page-base {
	background-image: none;
	background: #000;
}

.mw-body {
	background: #000;
	border-width: 0;
}

.mw-body-content,
aside a, 
aside p, /* related articles: titles & second line with desc*/
.infobox span
{
	color: lightgray !important;
}

#mw-panel {
	display:none;
}
 
#content {
	margin-left: 0;
}

#toc
{
	background: #000;
	border: 0;
}

h1, h2, h3, h4, h5, h6 {
	border-bottom: 0;
	color: lightgray;
}
 
.mw-body h1 {
	font-size: 4em;
}

.mw-body h2 {
	font-size: 3em;
}

code {
	color: lightgray;
	background: #000;
	border: 1px solid;
}

.mw-code {
	background: #000;
	color: lightgray;
	border: 0;
}

pre, .mw-code {
	background: #000;
	color: lightgray;
	border: 0;
}

.kw1 { color: lightgray; }
.java.source-java .kw1 {color: lightgray;}
.css.source-css .kw1 { color: lightgray; } /* property name */

.kw3 { color: #4444aa; }
.kw2 { color: #ccc; }

 /* keywords: class, extends, private, this, new, return */
.java5.source-java5 .kw2 { color: white; }

/* code */
.kw4
.java.source-java,  /* return type, ex void */
.kw4,
.nn 
{
	color: lightblue !important;
}

/* constructor call */
.java5.source-java5 .kw166 {
	color: lightseagreen;
}

/* reference and method call */
.java5.source-java5 .me1 {
	color: #0EFF87;
}

/* void */
.java5.source-java5 .kw3 {
	color: #0EFF87;
}

/* () */
.java5.source-java5 .br0 {
	color: #0EFF87;
}

/* <?> */
.java5.source-java5 .sy0 {
	color: #0EFF87;
}

.re0 { color: #6666ff; }
.co5 { color: #6666ff; }
.co3 { color: #6666ff; }
.es0 { color: #6666aa; }
.br0 { color: #ccc; }
.me1 { color: #888; }
.sy0 { color: #444499; }
.nu0 { color: #6666dd; }
.st0 { color: #4444dd; }
.kw5 { color: #3333ff; }
.sy2 { color: #3333ff; }
.sy1 { color: #4040a0; }
.es1 { color: #222299; }
.sy3 { color: #444488; }
.nc,.nf{color: #9090DB !important;}

.ambox {
	background: #000;
	border: 1px solid lightgray;
}

blockquote {
	background: #000;
	border: 1px solid darkslategrey !important;
}

div[style*="#FCFCCC;"] {
	background-color: #303023 !important;
}

div[style*="#FFE7CC;"] {
	background-color: #322312 !important;
}

.diffchange {
	background: #855 !important;
}

aside h3:after, /* related articles: gradient line */
th,
td
{
    background: none !important;
}

#footer {
	display: none !important;
}

html {
    scrollbar-width: thin;
    scrollbar-color: #555 #000;
}



.mwe-math-mathml-a11y {
    clip: auto !important;
    overflow: visible !important;
    position: static !important;
    width: auto !important;
    height: auto !important;
    opacity: 1 !important;
    display: inherit !important;
}
body.mediawiki .ve-ce-mwLatexNode .mwe-math-mathml-a11y {
    /* override https://phabricator.wikimedia.org/diffusion/EMAT/browse/master/modules/ve-math/ve.ce.MWLatexNode.css */
    display: inherit !important;
}
/* Support where MediaWiki lazy loaded images */
.mwe-math-mathml-inline ~ .lazy-image-placeholder,
.mwe-math-mathml-display ~ .lazy-image-placeholder,
/* Support where MediaWiki doesn't lazy load images */
.mwe-math-mathml-inline + .mwe-math-fallback-image-inline,
.mwe-math-mathml-display + .mwe-math-fallback-image-display {
    display: none !important;
}

